# porticxx

./: .gitignore  README.md  meson.build
cross/: wasm32_stubs.ini  x86_64.ini
examples/: allocator_test.cpp  filesystem_test.cpp  hello_world.cpp  meson.build  string_test.cpp  thread_test.cpp  type_traits_test.cpp  unordered_map_test.cpp
include/: algorithm  cassert  cctype  compare  concepts  cstddef  cstdint  cstdlib  cstring  cuchar  exception  filesystem  functional  initializer_list  iomanip  ios  iostream  istream  iterator  limits  list  locale  map  memory  mutex  new  ostream  set  sstream  stack  stdexcept  streambuf  string  string_view  system_error  thread  tuple  type_traits  typeinfo  unordered_map  (+4 more)
include/bits/: swap.hpp
include/bits/algorithm/: modifying_sequence_operations.hpp  sorting_operations.hpp
include/bits/arch/: arch.hpp  arch_base.hpp  default_arch.hpp  x86_64_arch.hpp
include/bits/compare/: classes.hpp
include/bits/deque/: classes.hpp
include/bits/exception/: exception.hpp  exception_ptr.hpp
include/bits/filesystem/: directory_entry.hpp  directory_iterator.hpp  path.hpp
include/bits/functional/: equal_to.hpp
include/bits/ios/: basic_ios.hpp  classes.hpp  fwd.hpp  ios_base.hpp
include/bits/istream/: basic_iostream.hpp  basic_istream.hpp  basic_istream_sentry.hpp
include/bits/iterator/: adaptor_classes.hpp  adaptor_functions.hpp  ostreambuf_iterator.hpp  primitives.hpp
include/bits/locale/: ctype.hpp  ctype_base.hpp  locale.hpp  num_put.hpp
include/bits/memory/: allocators.hpp  bin_allocator.hpp  default_delete.hpp  obj_allocator.hpp  pointer_traits.hpp  shared_pointer.hpp  smart_pointers.hpp  unique_pointer.hpp  weak_pointer.hpp
include/bits/mutex/: lock_guard.hpp  mutex.hpp
include/bits/ostream/: basic_ostream.hpp
include/bits/sstream/: basic_ostringstream.hpp  basic_stringstream.hpp
include/bits/streambuf/: basic_streambuf.hpp  basic_streambuf_char.hpp
include/bits/string/: basic_string.hpp  basic_string_view.hpp  char_traits.hpp  io.hpp
include/bits/string_view/: basic_string_view.hpp  io.hpp
include/bits/thread/: thread.hpp
include/bits/tuple/: functions.hpp  tuple.hpp  tuple_elements.hpp  tuple_size.hpp
include/bits/type_traits/: cv_specifiers.hpp  helpers.hpp  misc_transformations.hpp  refs.hpp  sign_mods.hpp  supported_ops.hpp  type_categories.hpp  type_properties.hpp  type_relationships.hpp  type_transformations.hpp  unary_type_traits.hpp
include/bits/unordered_map/: unordered_map.hpp
include/bits/utility/: functions.hpp  integer_sequence.hpp  pair.hpp  tags.hpp
include/bits/variant/: bad_variant_access.hpp
include/sys/: typses.h
src/: bin_allocator.cpp  cctype.cpp  cstdlib.cpp  cstring.cpp  exception.cpp  filesystem.cpp  iostream.cpp  system_error.cpp
src/allocator/: bin_allocator.cpp
src/arch/: default_arch.cpp  porticxx.cpp
src/arch/wasm32_stubs/: arch.cpp  runtime.cpp  syscall.cpp
src/arch/x86_64/: arch.cpp  fs.cpp  io.cpp  process.cpp  runtime.cpp  runtime.s  sys_call.hpp  sys_call.s  thread.cpp
src/cxx_abi/: dummy.cpp  new.cpp  rtti_dummy.cpp
src/exception/: exception.cpp  exception_ptr.cpp
src/include/: arch.hpp
src/include/arch/wasm32_stubs/: syscall.hpp
src/ios/: basic_ios.cpp  ios_base.cpp
src/iostream/: cerr.cpp  cin.cpp  cout.cpp
src/mutex/: mutex.cpp
src/ostream/: basic_ostream.cpp
src/porticxx/: runtime.cpp
src/streambuf/: arch_streambuf.cpp  basic_streambuf.cpp
src/string/: char_traits.cpp
src/thread/: thread.cpp
src/variant/: bad_variant_access.cpp
