executable('hello_world',
           'hello_world.cpp',
           dependencies: porticxx_dep,
           cpp_args: ['-D' + arch_define])

executable('echo',
           'echo.cpp',
           dependencies: porticxx_dep,
           cpp_args: ['-D' + arch_define])

executable('allocator_test',
           'allocator_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: ['-D' + arch_define])

executable('thread_test',
           'thread_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: ['-D' + arch_define])

executable('unordered_map_test',
           'unordered_map_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: ['-D' + arch_define])
