executable('hello_world',
           'hello_world.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args + ['-Werror'])

executable('echo',
           'echo.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args + ['-Werror'])

executable('allocator_test',
           'allocator_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args + ['-Werror'])

executable('string_test',
           'string_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args + ['-Werror'])

executable('thread_test',
           'thread_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args + ['-Werror'])

executable('unordered_map_test',
           'unordered_map_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args +  ['-Werror'])

executable('filesystem_test',
           'filesystem_test.cpp',
           dependencies: porticxx_dep,
           cpp_args: arch_cpp_args + ['-Werror'])
